-------------------------
(2014-08-18) version 3.0:

  * Depend on Tyxml instead of Eliom.
  * Use Batteries instead of ExtLib.
  * Build system generated by OASIS.


-------------------------
(2010-03-03) version 2.0:

  * Now using GNU Source-highlight as backend.
  * Added Camlhighlight_parser.set_tabspaces to API.
  * Improved error handling.


-------------------------
(2010-01-29) version 1.0:

  * First public release.
