@@ -1,9 +1,9 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 9b83939f1bac66a927bb51fc9559e6f1) *)
+(* DO NOT EDIT (digest: 9fb895bbc06a873fd7aa56aa6a5d414a) *)
 (*
-   Regenerated by OASIS v0.4.4
+   Regenerated by OASIS v0.4.5
    Visit http://oasis.forge.ocamlcore.org for more information and
    documentation about functions used in this file.
 *)
@@ -242,11 +242,9 @@ module OASISString = struct
 
 
   let replace_chars f s =
-    let buf = String.make (String.length s) 'X' in
-      for i = 0 to String.length s - 1 do
-        buf.[i] <- f s.[i]
-      done;
-      buf
+    let buf = Buffer.create (String.length s) in
+    String.iter (fun c -> Buffer.add_char buf (f c)) s;
+    Buffer.contents buf
 
 
 end
@@ -1729,6 +1727,13 @@ module OASISFeatures = struct
       (fun () ->
         s_ "Allows the OASIS section comments and digest to be omitted in \
             generated files.")
+
+  let no_automatic_syntax =
+    create "no_automatic_syntax" alpha
+      (fun () ->
+         s_ "Disable the automatic inclusion of -syntax camlp4o for packages \
+             that matches the internal heuristic (if a dependency ends with \
+             a .syntax or is a well known syntax).")
 end
 
 module OASISUnixPath = struct
@@ -2099,16 +2104,6 @@ module OASISLibrary = struct
         lst
     in
 
-    (* The headers that should be compiled along *)
-    let headers =
-      if lib.lib_pack then
-        []
-      else
-        find_modules
-          lib.lib_modules
-          "cmi"
-    in
-
     (* The .cmx that be compiled along *)
     let cmxs =
       let should_be_built =
@@ -2134,12 +2129,32 @@ module OASISLibrary = struct
       []
     in
 
+    (* The headers and annot/cmt files that should be compiled along *)
+    let headers =
+      let sufx =
+        if lib.lib_pack
+        then [".cmti"; ".cmt"; ".annot"]
+        else [".cmi"; ".cmti"; ".cmt"; ".annot"]
+      in
+      List.map
+        begin
+          List.fold_left
+            begin fun accu s ->
+              let dot = String.rindex s '.' in
+              let base = String.sub s 0 dot in
+              List.map ((^) base) sufx @ accu
+            end
+            []
+        end
+        (find_modules lib.lib_modules "cmi")
+    in
+
     (* Compute what libraries should be built *)
     let acc_nopath =
       (* Add the packed header file if required *)
       let add_pack_header acc =
         if lib.lib_pack then
-          [cs.cs_name^".cmi"] :: acc
+          [cs.cs_name^".cmi"; cs.cs_name^".cmti"; cs.cs_name^".cmt"] :: acc
         else
           acc
       in
@@ -2499,13 +2514,13 @@ module OASISFindlib = struct
     in
 
     let library_name_of_findlib_name =
-      Lazy.lazy_from_fun
-        (fun () ->
-           (* Revert findlib_name_of_library_name. *)
-           MapString.fold
-             (fun k v mp -> MapString.add v k mp)
-             fndlb_name_of_lib_name
-             MapString.empty)
+      lazy begin
+        (* Revert findlib_name_of_library_name. *)
+        MapString.fold
+          (fun k v mp -> MapString.add v k mp)
+          fndlb_name_of_lib_name
+          MapString.empty
+      end
     in
     let library_name_of_findlib_name fndlb_nm =
       try
@@ -2875,7 +2890,7 @@ module OASISFileUtil = struct
 end
 
 
-# 2878 "setup.ml"
+# 2893 "setup.ml"
 module BaseEnvLight = struct
 (* # 22 "src/base/BaseEnvLight.ml" *)
 
@@ -2980,7 +2995,7 @@ module BaseEnvLight = struct
 end
 
 
-# 2983 "setup.ml"
+# 2998 "setup.ml"
 module BaseContext = struct
 (* # 22 "src/base/BaseContext.ml" *)
 
@@ -5391,7 +5406,7 @@ module BaseSetup = struct
 end
 
 
-# 5394 "setup.ml"
+# 5409 "setup.ml"
 module InternalConfigurePlugin = struct
 (* # 22 "src/plugins/internal/InternalConfigurePlugin.ml" *)
 
@@ -5827,6 +5842,17 @@ module InternalInstallPlugin = struct
           lst
     in
 
+    let make_fnames modul sufx =
+      List.fold_right
+        begin fun sufx accu ->
+          (String.capitalize modul ^ sufx) ::
+          (String.uncapitalize modul ^ sufx) ::
+          accu
+        end
+        sufx
+        []
+    in
+
     (** Install all libraries *)
     let install_libs pkg =
 
@@ -5847,27 +5873,29 @@ module InternalInstallPlugin = struct
                   OASISHostPath.of_unix bs.bs_path
                 in
                   List.fold_left
-                    (fun acc modul ->
-                       try
-                         List.find
-                           OASISFileUtil.file_exists_case
-                           (List.map
-                              (Filename.concat path)
-                              [modul^".mli";
-                               modul^".ml";
-                               String.uncapitalize modul^".mli";
-                               String.capitalize   modul^".mli";
-                               String.uncapitalize modul^".ml";
-                               String.capitalize   modul^".ml"])
-                         :: acc
-                       with Not_found ->
-                         begin
-                           warning
-                             (f_ "Cannot find source header for module %s \
-                                  in library %s")
-                             modul cs.cs_name;
-                           acc
-                         end)
+                    begin fun acc modul ->
+                      begin
+                        try
+                          [List.find
+                            OASISFileUtil.file_exists_case
+                            (List.map
+                               (Filename.concat path)
+                               (make_fnames modul [".mli"; ".ml"]))]
+                        with Not_found ->
+                          warning
+                            (f_ "Cannot find source header for module %s \
+                                 in library %s")
+                            modul cs.cs_name;
+                          []
+                      end
+                      @
+                      List.filter
+                        OASISFileUtil.file_exists_case
+                        (List.map
+                           (Filename.concat path)
+                           (make_fnames modul [".annot";".cmti";".cmt"]))
+                      @ acc
+                    end
                     acc
                     lib.lib_modules
               in
@@ -5915,27 +5943,29 @@ module InternalInstallPlugin = struct
                   OASISHostPath.of_unix bs.bs_path
                 in
                   List.fold_left
-                    (fun acc modul ->
-                       try
-                         List.find
-                           OASISFileUtil.file_exists_case
-                           (List.map
-                              (Filename.concat path)
-                              [modul^".mli";
-                               modul^".ml";
-                               String.uncapitalize modul^".mli";
-                               String.capitalize   modul^".mli";
-                               String.uncapitalize modul^".ml";
-                               String.capitalize   modul^".ml"])
-                         :: acc
-                       with Not_found ->
-                         begin
-                           warning
-                             (f_ "Cannot find source header for module %s \
-                                  in object %s")
-                             modul cs.cs_name;
-                           acc
-                         end)
+                    begin fun acc modul ->
+                      begin
+                        try
+                          [List.find
+                             OASISFileUtil.file_exists_case
+                             (List.map
+                                (Filename.concat path)
+                                (make_fnames modul [".mli"; ".ml"]))]
+                        with Not_found ->
+                          warning
+                            (f_ "Cannot find source header for module %s \
+                                 in object %s")
+                            modul cs.cs_name;
+                          []
+                      end
+                      @
+                      List.filter
+                        OASISFileUtil.file_exists_case
+                        (List.map
+                           (Filename.concat path)
+                           (make_fnames modul [".annot";".cmti";".cmt"]))
+                      @ acc
+                    end
                     acc
                     obj.obj_modules
               in
@@ -6240,7 +6270,7 @@ module InternalInstallPlugin = struct
 end
 
 
-# 6243 "setup.ml"
+# 6273 "setup.ml"
 module OCamlbuildCommon = struct
 (* # 22 "src/plugins/ocamlbuild/OCamlbuildCommon.ml" *)
 
@@ -6295,6 +6325,11 @@ module OCamlbuildCommon = struct
 
         if bool_of_string (debug ()) then
           ["-tag"; "debug"]
+        else
+          [];
+
+        if bool_of_string (tests ()) then
+          ["-tag"; "tests"]
         else
           [];
 
@@ -6613,7 +6648,7 @@ module OCamlbuildDocPlugin = struct
 end
 
 
-# 6616 "setup.ml"
+# 6651 "setup.ml"
 module CustomPlugin = struct
 (* # 22 "src/plugins/custom/CustomPlugin.ml" *)
 
@@ -6761,7 +6796,7 @@ module CustomPlugin = struct
 end
 
 
-# 6764 "setup.ml"
+# 6799 "setup.ml"
 open OASISTypes;;
 
 let setup_t =
@@ -6820,26 +6855,26 @@ let setup_t =
      distclean_doc = [];
      package =
        {
-          oasis_version = "0.3";
+          oasis_version = "0.4";
           ocaml_version = None;
           findlib_version = None;
           alpha_features = [];
           beta_features = [];
           name = "camlhighlight";
-          version = "3.0";
+          version = "3.0.1";
           license =
             OASISLicense.DEP5License
               (OASISLicense.DEP5Unit
                  {
                     OASISLicense.license = "GPL";
                     excption = None;
-                    version = OASISLicense.Version "2.0"
+                    version = OASISLicense.Version "2"
                  });
           license_file = Some "LICENSE";
           copyrights = [];
           maintainers = [];
-          authors = ["Dario Teixeira"];
-          homepage = None;
+          authors = ["Dario Teixeira <dario.teixeira@nleyten.com>"];
+          homepage = Some "http://camlhighlight.forge.ocamlcore.org/";
           synopsis = "Syntax highlighting for Ocsigen applications";
           description =
             Some
@@ -6902,7 +6937,8 @@ let setup_t =
                            FindlibPackage ("sexplib", None);
                            FindlibPackage ("tyxml", None)
                         ];
-                      bs_build_tools = [ExternalTool "ocamlbuild"];
+                      bs_build_tools =
+                        [ExternalTool "ocamlbuild"; ExternalTool "make"];
                       bs_c_sources = ["source-highlight_stubs.c"];
                       bs_data_files = [];
                       bs_ccopt =
@@ -6959,7 +6995,11 @@ let setup_t =
                       doc_format = OtherDoc;
                       doc_data_files = [];
                       doc_build_tools =
-                        [ExternalTool "ocamlbuild"; ExternalTool "ocamldoc"]
+                        [
+                           ExternalTool "ocamlbuild";
+                           ExternalTool "make";
+                           ExternalTool "ocamldoc"
+                        ]
                    });
                Executable
                  ({
@@ -6977,7 +7017,8 @@ let setup_t =
                       bs_path = "tests";
                       bs_compiled_object = Best;
                       bs_build_depends = [InternalLibrary "camlhighlight"];
-                      bs_build_tools = [ExternalTool "ocamlbuild"];
+                      bs_build_tools =
+                        [ExternalTool "ocamlbuild"; ExternalTool "make"];
                       bs_c_sources = [];
                       bs_data_files = [];
                       bs_ccopt = [(OASISExpr.EBool true, [])];
@@ -7013,19 +7054,19 @@ let setup_t =
                                 OASISExpr.EFlag "tests"),
                              true)
                         ];
-                      test_tools = [ExternalTool "ocamlbuild"]
+                      test_tools =
+                        [ExternalTool "ocamlbuild"; ExternalTool "make"]
                    })
             ];
           plugins =
-            [(`Extra, "META", Some "0.3"); (`Extra, "DevFiles", Some "0.3")];
+            [(`Extra, "META", Some "0.4"); (`Extra, "DevFiles", Some "0.4")];
           disable_oasis_section = [];
           schema_data = PropList.Data.create ();
           plugin_data = []
        };
      oasis_fn = Some "_oasis";
-     oasis_version = "0.4.4";
-     oasis_digest =
-       Some "#0\193\187\007\222\246\178\211\254\187\136\170Z\139\015";
+     oasis_version = "0.4.5";
+     oasis_digest = Some "\197\196=\1645\174G\007\140\206\139\204\020\166KX";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -7033,6 +7074,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 7037 "setup.ml"
+# 7078 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
