@@ -1,3 +1,9 @@
+---------------------------
+(2015-03-27) version 3.0.1:
+
+  * Minor updates and tweaks to build system.
+
+
 -------------------------
 (2014-08-18) version 3.0:
 
